--- a/front/package.json
+++ b/front/package.json
@@ -32,7 +32,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "node-sass": "^4.13.1",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "sass": "^1.54.5"
   }
 }
